# format_benchmarks

./: .gitmodules  CMakeLists.txt  readme.md
result/data/: fnt.xml  pugixml_medium.xml  pugixml_small.xml  rapidjson_big.json  rapidjson_medium.json  rapidjson_small.json  rapidyaml_small.yml  yml-cpp_medium.yml  yml-cpp_medium_flow.yml  yml-cpp_small.yml
result/data/temp/: small.json  small.xml  small.yml
src/: json_1.inl  main.cpp  utils.cpp  utils.hpp  xml_1.inl  yml_1.inl
